# llm_pptx_deck_builder

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  README_IMPLEMENTATION.md  README_TEMPLATE.md  deck_builder_cli.py  netlify.toml  pyproject.toml  pytest.ini  test_bullets.py  test_content_quality.py  test_final_validation.py  test_validation_only.py  validate.py
.claude/commands/: execute-langchain-prp.md  generate-langchain-prp.md
.github/workflows/: build_deck.yml  ci.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
PRPs/: INITIAL_llm_pptx_deck_builder.md  deck-builder-agent.md
PRPs/templates/: prp_langchain_base.md
docs/: netlify_setup.md  netlify_web_ui.md
netlify/functions/: _github.ts  create_job.ts  download_artifact.ts  job_status.ts  package.json
output/: AI Market Growth Projections to 2025_20250826_110348.pptx  AIs Impact on Job Creation and Productivity_20250826_103506.pptx  Introduction_20250826_053309.pptx  Introduction_20250826_053937.pptx  Introduction_20250826_055003.pptx  Introduction_20250826_061526.pptx  Introduction_20250826_073730.pptx  Introduction_20250826_085942.pptx  Introduction_20250826_092455.pptx  Presentation_20250826_043655.pptx  Presentation_20250826_043701.pptx  Presentation_20250826_044051.pptx  Presentation_20250826_044057.pptx  Presentation_20250826_044322.pptx  Presentation_20250826_044328.pptx  Presentation_20250826_044456.pptx  Presentation_20250826_044535.pptx  Presentation_20250826_054217.pptx  Surging Growth in Global AI Investments_20250829_185439.pptx  test_bullets.pptx
scripts/: start_phoenix.py  stop_phoenix.py
src/: __init__.py  deck_builder_agent.py  dependencies.py  models.py  rate_limiter.py  settings.py  tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_integration.py  test_templates.py  test_tools.py
tests/_stubs/langchain_community/: __init__.py  document_loaders.py
tests/_stubs/langchain_core/: __init__.py  messages.py  tools.py
tests/_stubs/langchain_core/language_models/: __init__.py  fake.py
tests/_stubs/langchain_openai/: __init__.py
tests/_stubs/langgraph/: __init__.py  graph.py
tests/_stubs/llama_index/: __init__.py
tests/_stubs/pptx/: __init__.py  util.py
tests/_stubs/pydantic_ai/: __init__.py
tests/fixtures/: README.md
tests/fixtures/templates/: Colorful conference presentation.pptx  Prismatic design.pptx
web/: index.html  package.json
web/src/: App.tsx  api.ts  main.tsx  types.ts
(+13 files in other folders)
