[project]
name = "llm-pptx-deck-builder"
version = "0.1.0"
description = "LangChain-powered PowerPoint deck builder with Brave Search and LlamaIndex RAG"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.2.16",
    "langchain-community>=0.2.16", 
    "langchain-openai>=0.2.1",
    "langgraph>=0.2.28",
    "llama-index>=0.11.16",
    "llama-index-llms-openai>=0.2.5",
    "llama-index-embeddings-openai>=0.2.3",
    "python-pptx>=0.6.23",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "html2text>=2024.2.26",
    "tiktoken>=0.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # Phoenix observability dependencies
    "arize-phoenix>=5.0.0",
    "openinference-instrumentation-langchain>=0.1.29",
    "openinference-instrumentation-llama-index>=3.0.0",
    "openinference-instrumentation-openai>=0.1.14",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]

[project.optional-dependencies]
# Full feature set for running without stubs
full = [
  "langgraph>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-openai>=0.1.0",
  "llama-index>=0.10.0",
  "python-pptx>=0.6.23",
  "pydantic-ai>=0.0.12",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.9", 
    "black>=24.8.0",
    "mypy>=1.11.0",
    "langsmith>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
